add auth endpoint to ws-consumer, with user and auth services
