# ws-consumer/internal/domain/ports/input.go
@@ -1,6 +1,7 @@
 package ports
 
 import (
+	"context"
 	"real-time-messaging/consumer/internal/domain/entities"
 
 	"github.com/gin-gonic/gin"
@@ -14,4 +15,13 @@ type Websocket interface {
 
 type Consumer interface {
 	Consume(c *gin.Context) error
+}
+
+type UserService interface {
+	GetUserByCredentials(ctx context.Context, email, password string) (*entities.User, error)
+}
+
+type AuthService interface {
+	GenerateToken(ctx context.Context, user *entities.User) (string, error)
+	ValidateToken(ctx context.Context, token string) (string, error)
 }
